# MyLogger

./: .gitignore  LICENSE  README.md  demo_01.py  demo_01.txt  demo_02.py  demo_02.txt  logger_model.py  pyproject.toml
src/yan_logger/: __init__.py  main.py
