[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yan_logger"  # 全小写，短横线分隔
version = "0.1.1"
description = "Use Python's logging instead of print to quickly output program information to the screen and log files, distinguish information levels by color, and include the ability to calculate program runtime. "
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Lethe yan", email = "yan-dream@qq.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # 你的依赖

[project.urls]
Homepage = "https://github.com/letheyan/MyLogger/"
Repository = "https://github.com/letheyan/MyLogger/"